feat: i18n system with FR/EN/AR translations

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1,1 +1,7 @@
-{}
+{
+  "record": "سجّل رسالة",
+  "countdown_instruction": "ارفع السماعة وانتظر الصافرة",
+  "stop": "إيقاف",
+  "confirmation": "تم تسجيل الفيديو!",
+  "returning": "جارٍ العودة..."
+}
